context augmentation failed

--- a/ReadData.ipynb
+++ b/ReadData.ipynb
@@ -134,14 +134,16 @@
     "max_gondola = 6\n",
     "max_shelves = 7\n",
     "\n",
+    "idx = 0\n",
     "plates = np.zeros((max_gondola,max_shelves))\n",
     "for item in planogram.find():\n",
-    "#     print (item)\n",
+    "    print (item)\n",
+    "    print()\n",
     "#     print (len(item['plate_ids']))\n",
-    "    count += len(item['plate_ids'])\n",
-    "#     shelf_index = item['plate_ids'][0]['shelf_id']['shelf_index']\n",
-    "#     gondola_id = item['plate_ids'][0]['shelf_id']['gondola_id']['id']\n",
-    "#     plates[gondola_id][shelf_index] += len(item['plate_ids'])\n",
+    "#     count += len(item['plate_ids'])\n",
+    "    shelf_index = item['plate_ids'][0]['shelf_id']['shelf_index']\n",
+    "    gondola_id = item['plate_ids'][0]['shelf_id']['gondola_id']['id']\n",
+    "    plates[gondola_id][shelf_index] += len(item['plate_ids'])\n",
     "    product_barcode_type = item['planogram_product_id']['barcode_type']\n",
     "    product_barcode = item['planogram_product_id']['id']\n",
     "    product = products[product_barcode]\n",
@@ -149,11 +151,14 @@
     "#     plate_ids = []\n",
     "#     for plate_id in item['plate_ids']:\n",
     "#         plate_ids.append(plate_id['plate_index'])\n",
-    "    print (products[product_barcode])\n",
+    "#     print (products[product_barcode])\n",
+    "    idx += 1\n",
+    "    if (idx >=2) :\n",
+    "        break\n",
     "    \n",
-    "print (plates)\n",
-    "print (count)\n",
-    "print (item)"
+    "# print (plates)\n",
+    "# print (count)\n",
+    "# print (item)"
    ]
   },
   {
@@ -215,6 +220,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import PIL.Image\n",
+    "import io\n",
+    "from IPython.display import clear_output, Image as PILIMAGE, display, HTML\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import time\n",
+    "\n",
+    "def showarray(a, fmt='jpeg'):\n",
+    "    a = np.uint8(a)\n",
+    "#     a = a[:,:,[2,1,0]]\n",
+    "    f = io.BytesIO()\n",
+    "    PIL.Image.fromarray(a).save(f, fmt)\n",
+    "    display(PILIMAGE(data=f.getvalue()))\n",
+    "\n",
     "from cpsdriver.codec import DocObjectCodec\n",
     "database_name = \"cps-test-01\"\n",
     "\n",
@@ -234,17 +253,28 @@
     "\n",
     "# method 2\n",
     "import io\n",
+    "import time\n",
     "from PIL import Image\n",
     "\n",
     "from IPython.display import clear_output, display, HTML\n",
     "for item in frame_message.find():\n",
-    "    print (item['date_time'],'camera_id',item['camera_id'],'frames',len(item['document']['frame_message']['frames']))\n",
+    "#     print (item)\n",
+    "#     \n",
     "    rgb = DocObjectCodec.decode(doc=item, collection='frame_message')\n",
     "    imageStream = io.BytesIO(rgb.frame)\n",
     "    imageFile = Image.open(imageStream)\n",
-    "    print ('image size', imageFile.size)\n",
-    "    display(imageFile)\n",
-    "    break"
+    "#     print ('image size', imageFile.size)\n",
+    "    showarray(imageFile)\n",
+    "# #         out.write(v.get_image()[:, :, ::-1])\n",
+    "#         frame_count += 1\n",
+    "#         elapsed_time = time.time() - start_time # seconds\n",
+    "#         print (int(frame_count/elapsed_time), 'fps')\n",
+    "#         # Display the frame until new frame is available\n",
+    "    print (item['date_time'],'camera_id',item['camera_id'],'frames',len(item['document']['frame_message']['frames']))\n",
+    "    time.sleep(1)\n",
+    "    clear_output(wait=True)\n",
+    "# #         break\n",
+    "#     break"
    ]
   },
   {
