added 224 toy classifier

--- a/Dataset_224.ipynb
+++ b/Dataset_224.ipynb
@@ -217,6 +217,7 @@
     "    bg_cropped = test_crop_contour_from_product(pdt, bg_cropped)\n",
     "    combined[y_offset:y_offset+pdt_y, x_offset:x_offset+pdt_x] = bg_cropped\n",
     "    combined_224 = combined[y_offset+pdt_y//2-112:y_offset+pdt_y//2+112, x_offset+pdt_x//2-112:x_offset+pdt_x//2+112]\n",
+    "#     combined_32 = cv2.resize(combined_224, dsize=(32, 32), interpolation=cv2.INTER_CUBIC)\n",
     "#     cv2.rectangle(combined,(x_offset,y_offset),(x_offset+pdt_x,y_offset+pdt_y),(0,0,255),3)\n",
     "\n",
     "    cv2.imwrite(combined_output_path, combined_224)\n",
@@ -255,7 +256,7 @@
     "            if not f.endswith('.png') and not f.endswith('.jpg'):\n",
     "                continue\n",
     "            count += 1\n",
-    "            if count % 5 != 0:\n",
+    "            if count % 50 != 0:\n",
     "                continue\n",
     "            product_image_path = join(in_folder, f)\n",
     "            background_image_path = bg_imgs[random.randint(0, bg_imgs_count-1)]\n",
