try classifier failed

--- a/Classifier_224.ipynb
+++ b/Classifier_224.ipynb
@@ -12,7 +12,11 @@
     "import torchvision\n",
     "import torchvision.datasets as datasets\n",
     "import torchvision.transforms as transforms\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "# torch.cuda.get_device_name(0)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)"
    ]
   },
   {
@@ -21,10 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "traindir = 'data/classifier/train-224x224'\n",
-    "testdir = 'data/classifier/test-224x224'\n",
-    "\n",
-    "# mobilenet = models.mobilenet_v2(pretrained=True)"
+    "# https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html\n",
+    "train_dir = 'data/classifier/train-224x224'\n",
+    "test_composed_dir = 'data/classifier/test-224x224'\n",
+    "test_real_dir = 'data/classifier/test-224x224-real'"
    ]
   },
   {
@@ -81,19 +85,34 @@
     "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
     "                                 std=[0.229, 0.224, 0.225])\n",
     "\n",
-    "train_dataset = datasets.ImageFolder(traindir, transforms.Compose([\n",
-    "            transforms.ToTensor()\n",
+    "train_dataset = datasets.ImageFolder(train_dir, transforms.Compose([\n",
+    "            transforms.Scale(256),\n",
+    "            transforms.CenterCrop(224),\n",
+    "            transforms.ToTensor(),\n",
+    "            normalize,\n",
     "        ]))\n",
-    "trainloader = torch.utils.data.DataLoader(\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
     "        train_dataset,\n",
-    "        batch_size=1, \n",
+    "        batch_size=16, \n",
     "        shuffle=True,\n",
-    "        num_workers=1)\n",
-    "test_dataset = datasets.ImageFolder(testdir, transforms.Compose([\n",
-    "            transforms.ToTensor()\n",
+    "        num_workers=4)\n",
+    "\n",
+    "test_composed_dataset = datasets.ImageFolder(test_composed_dir, transforms.Compose([\n",
+    "            transforms.ToTensor(),\n",
+    "            normalize,\n",
     "        ]))\n",
-    "testloader = torch.utils.data.DataLoader(\n",
-    "        test_dataset,\n",
+    "test_composed_loader = torch.utils.data.DataLoader(\n",
+    "        test_composed_dataset,\n",
+    "        batch_size=1, \n",
+    "        shuffle=False,\n",
+    "        num_workers=1)\n",
+    "\n",
+    "test_real_dataset = datasets.ImageFolder(test_real_dir, transforms.Compose([\n",
+    "            transforms.ToTensor(),\n",
+    "            normalize,\n",
+    "        ]))\n",
+    "test_real_loader = torch.utils.data.DataLoader(\n",
+    "        test_real_dataset,\n",
     "        batch_size=1, \n",
     "        shuffle=True,\n",
     "        num_workers=1)"
@@ -112,18 +131,24 @@
     "    \n",
     "def show_samples():\n",
     "    # get some random training images\n",
-    "    dataiter = iter(trainloader)\n",
+    "    dataiter = iter(train_loader)\n",
+    "    images, labels = dataiter.next()\n",
+    "    imshow(torchvision.utils.make_grid(images[0]))\n",
+    "    print(products[train_dataset.classes[labels[0]]])\n",
+    "\n",
+    "    # get some random composed test images\n",
+    "    dataiter = iter(test_composed_loader)\n",
     "    images, labels = dataiter.next()\n",
     "    imshow(torchvision.utils.make_grid(images))\n",
-    "    print(products[train_dataset.classes[labels]])\n",
-    "\n",
-    "    # get some random test images\n",
-    "    dataiter = iter(testloader)\n",
+    "    print(products[test_composed_dataset.classes[labels]])\n",
+    "    \n",
+    "    # get some random real test images\n",
+    "    dataiter = iter(test_real_loader)\n",
     "    images, labels = dataiter.next()\n",
     "    imshow(torchvision.utils.make_grid(images))\n",
-    "    print(products[test_dataset.classes[labels]])\n",
+    "    print(products[test_real_dataset.classes[labels]])\n",
     "\n",
-    "# show_samples()"
+    "show_samples()"
    ]
   },
   {
@@ -169,7 +194,9 @@
    "source": [
     "import torch.optim as optim\n",
     "\n",
-    "net = Net()\n",
+    "# net = Net()\n",
+    "net = models.mobilenet_v2(pretrained=True).to(device)\n",
+    "# net[Linear-158] = nn.Linear()\n",
     "summary(net, input_size=(3, 224, 224))\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n"
@@ -181,13 +208,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "def train():\n",
-    "    for epoch in range(2):  # loop over the dataset multiple times\n",
+    "    net.train()\n",
+    "    start = time.time()\n",
+    "    for epoch in range(10):  # loop over the dataset multiple times\n",
     "        running_loss = 0.0\n",
-    "        for i, data in enumerate(trainloader, 0):\n",
+    "        for i, data in enumerate(train_loader, 0):\n",
     "            # get the inputs; data is a list of [inputs, labels]\n",
     "            inputs, labels = data\n",
-    "\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            \n",
     "            # zero the parameter gradients\n",
     "            optimizer.zero_grad()\n",
     "\n",
@@ -199,13 +230,13 @@
     "\n",
     "            # print statistics\n",
     "            running_loss += loss.item()\n",
-    "            if i % 1000 == 999:    # print every 2000 mini-batches\n",
-    "                print('[%d, %5d] loss: %.3f' %\n",
-    "                      (epoch + 1, i + 1, running_loss / 2000))\n",
-    "                running_loss = 0.0\n",
+    "        \n",
+    "        elapsed_time = time.time() - start\n",
+    "        print('%d min [epoch %d, %d batches] loss: %.3f' %\n",
+    "              (elapsed_time / 60, epoch + 1, len(train_loader), running_loss / len(train_loader)))\n",
     "\n",
     "    print('Finished Training')\n",
-    "train()"
+    "# train()"
    ]
   },
   {
@@ -214,8 +245,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_PATH = 'data/classifier/224x224.model'\n",
-    "torch.save(net.state_dict(), SAVE_PATH)"
+    "SAVE_PATH = 'data/classifier/mobilenet_224x224.model'\n",
+    "# torch.save(net.state_dict(), SAVE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testloader = test_composed_loader\n",
+    "test_dataset = test_composed_dataset\n",
+    "\n",
+    "# testloader = test_real_loader\n",
+    "# test_dataset = test_real_dataset"
    ]
   },
   {
@@ -225,22 +269,28 @@
    "outputs": [],
    "source": [
     "net = Net()\n",
+    "net = models.mobilenet_v2(pretrained=True).to(device)\n",
     "net.load_state_dict(torch.load(SAVE_PATH))\n",
     "\n",
     "# test images\n",
     "dataiter = iter(testloader)\n",
     "images, labels = dataiter.next()\n",
-    "\n",
+    "images, labels = images.to(device), labels.to(device)\n",
     "outputs = net(images)\n",
     "\n",
     "_, predicted = torch.max(outputs, 1)\n",
-    "print('Predicted \\n', ''.join('%5s\\n' % products[test_dataset.classes[predicted[j]]]\n",
-    "                              for j in range(1)))\n",
+    "print ('predicted')\n",
+    "for pred in predicted:\n",
+    "#     print (pred)\n",
+    "#     print (train_dataset.classes[pred])\n",
+    "    print (products[train_dataset.classes[pred]])\n",
     "\n",
     "# print images\n",
-    "imshow(torchvision.utils.make_grid(images))\n",
-    "product = products[test_dataset.classes[labels]]\n",
-    "print('GroundTruth: ', product )"
+    "imshow(torchvision.utils.make_grid(images.cpu()))\n",
+    "pdts = [products[test_dataset.classes[label]] for label in labels]\n",
+    "print ('ground truth:\\n')\n",
+    "for product in pdts:\n",
+    "    print (product)"
    ]
   },
   {
@@ -251,16 +301,33 @@
    "source": [
     "correct = 0\n",
     "total = 0\n",
+    "\n",
+    "net.eval()\n",
+    "\n",
     "with torch.no_grad():\n",
+    "    \n",
     "    for data in testloader:\n",
     "        images, labels = data\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        outputs = net(images)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "#         print (outputs.shape)\n",
+    "        _, predicteds = torch.max(outputs, 1)\n",
     "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
-    "\n",
+    "#         print (train_dataset.classes[predicted])\n",
+    "#         print (test_dataset.classes[labels])\n",
+    "#         print (predicteds)\n",
+    "        for i in range(len(images)):\n",
+    "            predicted = predicteds[i]\n",
+    "            label = labels[i]\n",
+    "           \n",
+    "            predicted_barcode = train_dataset.classes[predicted]\n",
+    "            groundtruth_barcode = test_dataset.classes[label]\n",
+    "            print (predicted_barcode, groundtruth_barcode)\n",
+    "            if (predicted_barcode == groundtruth_barcode):\n",
+    "                correct += 1\n",
+    "# \n",
     "print('Accuracy of the network on the test images: %d %%' % (\n",
-    "    100 * correct / total))"
+    "    100.0 * correct / total))"
    ]
   },
   {
