--- a/ReadData.ipynb
+++ b/ReadData.ipynb
@@ -220,61 +220,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read video frame\n",
     "import PIL.Image\n",
     "import io\n",
     "from IPython.display import clear_output, Image as PILIMAGE, display, HTML\n",
     "import numpy as np\n",
     "import cv2\n",
     "import time\n",
+    "from cpsdriver.codec import DocObjectCodec\n",
+    "import io\n",
+    "import time\n",
+    "from PIL import Image\n",
+    "from IPython.display import clear_output, display, HTML\n",
+    "from pymongo import MongoClient\n",
     "\n",
     "def showarray(a, fmt='jpeg'):\n",
+    "    a = a.resize((1280,720))\n",
     "    a = np.uint8(a)\n",
     "#     a = a[:,:,[2,1,0]]\n",
     "    f = io.BytesIO()\n",
     "    PIL.Image.fromarray(a).save(f, fmt)\n",
     "    display(PILIMAGE(data=f.getvalue()))\n",
     "\n",
-    "from cpsdriver.codec import DocObjectCodec\n",
-    "database_name = \"cps-test-01\"\n",
-    "\n",
+    "client = MongoClient('mongodb://localhost:27017')\n",
+    "db = client['cps-test-01']\n",
     "frame_message = db['frame_message']\n",
-    "print (frame_message.count())\n",
-    "item = frame_message.find_one()\n",
-    "# print (item)\n",
-    "# print (item['document']['frame_message']['frames'][0]['frame']['data'])\n",
-    "# rgb = DocObjectCodec.decode(doc=item, collection='frame_message')\n",
+    "camera_id = 2\n",
     "\n",
-    "# method1: works but block UI\n",
-    "# import cv2\n",
-    "# rgb_data = cv2.imdecode(np.frombuffer(rgb.frame, dtype=np.uint8), -1)\n",
-    "# # print (rgb_data)\n",
-    "# cv2.imshow('RGB', rgb_data)\n",
-    "# cv2.waitKey(100)\n",
-    "\n",
-    "# method 2\n",
-    "import io\n",
-    "import time\n",
-    "from PIL import Image\n",
-    "\n",
-    "from IPython.display import clear_output, display, HTML\n",
     "for item in frame_message.find():\n",
-    "#     print (item)\n",
-    "#     \n",
+    "    if item['camera_id'] != camera_id:\n",
+    "        continue\n",
+    "        \n",
     "    rgb = DocObjectCodec.decode(doc=item, collection='frame_message')\n",
     "    imageStream = io.BytesIO(rgb.frame)\n",
     "    imageFile = Image.open(imageStream)\n",
-    "#     print ('image size', imageFile.size)\n",
+    "    \n",
     "    showarray(imageFile)\n",
-    "# #         out.write(v.get_image()[:, :, ::-1])\n",
-    "#         frame_count += 1\n",
-    "#         elapsed_time = time.time() - start_time # seconds\n",
-    "#         print (int(frame_count/elapsed_time), 'fps')\n",
-    "#         # Display the frame until new frame is available\n",
-    "    print (item['date_time'],'camera_id',item['camera_id'],'frames',len(item['document']['frame_message']['frames']))\n",
-    "    time.sleep(1)\n",
-    "    clear_output(wait=True)\n",
-    "# #         break\n",
-    "#     break"
+    "\n",
+    "    print (item['date_time'],'camera_id',item['camera_id'])\n",
+    "#     time.sleep(0.1)\n",
+    "    clear_output(wait=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2?"
    ]
   },
   {
@@ -413,9 +407,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -427,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
