--- a/Classifier_224.ipynb
+++ b/Classifier_224.ipynb
@@ -104,7 +104,7 @@
     "test_composed_loader = torch.utils.data.DataLoader(\n",
     "        test_composed_dataset,\n",
     "        batch_size=1, \n",
-    "        shuffle=False,\n",
+    "        shuffle=True,\n",
     "        num_workers=1)\n",
     "\n",
     "test_real_dataset = datasets.ImageFolder(test_real_dir, transforms.Compose([\n",
@@ -115,7 +115,9 @@
     "        test_real_dataset,\n",
     "        batch_size=1, \n",
     "        shuffle=True,\n",
-    "        num_workers=1)"
+    "        num_workers=1)\n",
+    "\n",
+    "print ('train_dataset', len(train_dataset))"
    ]
   },
   {
@@ -194,12 +196,22 @@
    "source": [
     "import torch.optim as optim\n",
     "\n",
-    "# net = Net()\n",
-    "net = models.mobilenet_v2(pretrained=True).to(device)\n",
-    "# net[Linear-158] = nn.Linear()\n",
-    "summary(net, input_size=(3, 224, 224))\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n"
+    "def get_net():\n",
+    "    # net = Net()\n",
+    "    net = models.mobilenet_v2(pretrained=True)\n",
+    "    net.classifier = nn.Sequential(\n",
+    "        nn.Dropout(p=0.2, inplace=False),\n",
+    "        nn.Linear(1280, 18)\n",
+    "    )\n",
+    "    net = net.to(device)\n",
+    "#     summary(net, input_size=(3, 224, 224))\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n",
+    "    return net,criterion, optimizer\n",
+    "\n",
+    "net,criterion, optimizer = get_net()\n",
+    "SAVE_PATH = 'data/classifier/mobilenet_224x224.model'\n",
+    "net.load_state_dict(torch.load(SAVE_PATH))"
    ]
   },
   {
@@ -212,7 +224,7 @@
     "def train():\n",
     "    net.train()\n",
     "    start = time.time()\n",
-    "    for epoch in range(10):  # loop over the dataset multiple times\n",
+    "    for epoch in range(5):  # loop over the dataset multiple times\n",
     "        running_loss = 0.0\n",
     "        for i, data in enumerate(train_loader, 0):\n",
     "            # get the inputs; data is a list of [inputs, labels]\n",
@@ -236,7 +248,8 @@
     "              (elapsed_time / 60, epoch + 1, len(train_loader), running_loss / len(train_loader)))\n",
     "\n",
     "    print('Finished Training')\n",
-    "# train()"
+    "train()\n",
+    "torch.save(net.state_dict(), SAVE_PATH)"
    ]
   },
   {
@@ -245,60 +258,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_PATH = 'data/classifier/mobilenet_224x224.model'\n",
-    "# torch.save(net.state_dict(), SAVE_PATH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testloader = test_composed_loader\n",
-    "test_dataset = test_composed_dataset\n",
+    "# testloader = test_composed_loader\n",
+    "# test_dataset = test_composed_dataset\n",
     "\n",
-    "# testloader = test_real_loader\n",
-    "# test_dataset = test_real_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net = Net()\n",
-    "net = models.mobilenet_v2(pretrained=True).to(device)\n",
-    "net.load_state_dict(torch.load(SAVE_PATH))\n",
+    "testloader = test_real_loader\n",
+    "test_dataset = test_real_dataset\n",
     "\n",
-    "# test images\n",
-    "dataiter = iter(testloader)\n",
-    "images, labels = dataiter.next()\n",
-    "images, labels = images.to(device), labels.to(device)\n",
-    "outputs = net(images)\n",
-    "\n",
-    "_, predicted = torch.max(outputs, 1)\n",
-    "print ('predicted')\n",
-    "for pred in predicted:\n",
-    "#     print (pred)\n",
-    "#     print (train_dataset.classes[pred])\n",
-    "    print (products[train_dataset.classes[pred]])\n",
-    "\n",
-    "# print images\n",
-    "imshow(torchvision.utils.make_grid(images.cpu()))\n",
-    "pdts = [products[test_dataset.classes[label]] for label in labels]\n",
-    "print ('ground truth:\\n')\n",
-    "for product in pdts:\n",
-    "    print (product)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "correct = 0\n",
     "total = 0\n",
     "\n",
@@ -310,22 +275,22 @@
     "        images, labels = data\n",
     "        images, labels = images.to(device), labels.to(device)\n",
     "        outputs = net(images)\n",
-    "#         print (outputs.shape)\n",
     "        _, predicteds = torch.max(outputs, 1)\n",
     "        total += labels.size(0)\n",
-    "#         print (train_dataset.classes[predicted])\n",
-    "#         print (test_dataset.classes[labels])\n",
-    "#         print (predicteds)\n",
     "        for i in range(len(images)):\n",
     "            predicted = predicteds[i]\n",
     "            label = labels[i]\n",
-    "           \n",
+    "            \n",
     "            predicted_barcode = train_dataset.classes[predicted]\n",
     "            groundtruth_barcode = test_dataset.classes[label]\n",
-    "            print (predicted_barcode, groundtruth_barcode)\n",
+    "#             print ('pred:', predicted_barcode, 'gt:',groundtruth_barcode)\n",
+    "#             print ('[predicted] ', products[predicted_barcode])\n",
+    "#             print ('[gt       ] ', products[groundtruth_barcode])\n",
+    "#             imshow(torchvision.utils.make_grid(images.cpu()))\n",
     "            if (predicted_barcode == groundtruth_barcode):\n",
     "                correct += 1\n",
-    "# \n",
+    "#         break\n",
+    "\n",
     "print('Accuracy of the network on the test images: %d %%' % (\n",
     "    100.0 * correct / total))"
    ]
