--- a/Dataset_224.ipynb
+++ b/Dataset_224.ipynb
@@ -27,7 +27,11 @@
     "import cv2\n",
     "import numpy as np\n",
     "import shutil\n",
-    "import os"
+    "import os\n",
+    "import torch\n",
+    "import torchvision\n",
+    "import torchvision.datasets as datasets\n",
+    "import torchvision.transforms as transforms"
    ]
   },
   {
@@ -61,7 +65,49 @@
     "background_image_folder = 'data/classifier/background_images'\n",
     "product_image_folder = 'data/classifier/images_18skus'\n",
     "combined_output_folder = 'data/classifier/combined'\n",
-    "video_folder = 'data/cps-test-videos'"
+    "video_folder = 'data/public-dataset'\n",
+    "bg_video_files = ['192.168.1.101_2019-11-07_02-35-15.mp4',\n",
+    "                  '192.168.1.101_2019-11-07_02-41-17.mp4',\n",
+    "                  '192.168.1.103_2019-11-07_02-35-15.mp4',\n",
+    "                  '192.168.1.103_2019-11-07_02-41-17.mp4',\n",
+    "                  '192.168.1.105_2019-11-07_02-35-17.mp4',\n",
+    "                  '192.168.1.105_2019-11-07_02-41-16.mp4',\n",
+    "                  '192.168.1.107_2019-11-07_02-35-16.mp4',\n",
+    "                  '192.168.1.107_2019-11-07_02-41-19.mp4',\n",
+    "                  '192.168.1.109_2019-11-07_02-35-15.mp4',\n",
+    "                  '192.168.1.109_2019-11-07_02-41-16.mp4',\n",
+    "                  '192.168.1.111_2019-11-07_02-35-16.mp4',\n",
+    "                  '192.168.1.111_2019-11-07_02-41-19.mp4'\n",
+    "                 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display\n",
+    "\n",
+    "# auto adjust image brightness and contrast\n",
+    "product_dataset = datasets.ImageFolder(product_image_folder, transforms.Compose([\n",
+    "            transforms.ColorJitter(brightness=(0.7,0.9), contrast=0, saturation=0, hue=0)\n",
+    "        ]))\n",
+    "\n",
+    "def show_sample_images():\n",
+    "    idx = 0\n",
+    "    for pil_image, label in product_dataset:\n",
+    "        idx += 1\n",
+    "        if idx <= 10:\n",
+    "#             display(pil_image)\n",
+    "            open_cv_image = np.array(pil_image) \n",
+    "            open_cv_image = open_cv_image[:, :, ::-1].copy() \n",
+    "            cv2_imshow(open_cv_image)\n",
+    "            print (product_dataset.classes[label])\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "show_sample_images()"
    ]
   },
   {
@@ -77,6 +123,8 @@
     "    total_count = 0\n",
     "    frame_shape = None\n",
     "    for video_name in listdir(video_folder):\n",
+    "        if video_name not in bg_video_files:\n",
+    "            continue\n",
     "        video_path = join(video_folder, video_name)\n",
     "        capture = cv2.VideoCapture(video_path)\n",
     "        idx = 0\n",
@@ -85,7 +133,7 @@
     "            if frame_img is None:\n",
     "                break\n",
     "            frame_shape = frame_img.shape\n",
-    "            if idx % 6 == 5:\n",
+    "            if idx % 60 == 59:\n",
     "                output_name = join(background_image_folder, video_name + '_' + str(idx) + '.jpg')\n",
     "                cv2.imwrite(output_name,frame_img)\n",
     "                total_count +=1\n",
@@ -164,17 +212,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_image_path=\"data/classifier/images_18skus/041364087320/img_14628.png\"\n",
-    "# product_image_path=\"data/classifier/images_18skus/835144008984/img_10605.png\"\n",
-    "# product_image_path=\"data/classifier/images_18skus/040000513056/img_6861.png\"\n",
-    "img = cv2.imread(product_image_path)\n",
-    "cv2_imshow(img)\n",
-    "# white_bg = generate_white_bg_img(img.shape)\n",
-    "# cv2_imshow(test_crop_backpixels_from_product(img, white_bg))\n",
+    "def compare_cropping_img_methods(): \n",
+    "    product_image_path=\"data/classifier/images_18skus/041364087320/img_14628.png\"\n",
+    "    # product_image_path=\"data/classifier/images_18skus/835144008984/img_10605.png\"\n",
+    "    # product_image_path=\"data/classifier/images_18skus/040000513056/img_6861.png\"\n",
+    "    img = cv2.imread(product_image_path)\n",
+    "    cv2_imshow(img)\n",
+    "    # white_bg = generate_white_bg_img(img.shape)\n",
+    "    # cv2_imshow(test_crop_backpixels_from_product(img, white_bg))\n",
     "\n",
-    "img = cv2.imread(product_image_path)\n",
-    "white_bg = generate_white_bg_img(img.shape)\n",
-    "cv2_imshow(test_crop_contour_from_product(img, white_bg))"
+    "    img = cv2.imread(product_image_path)\n",
+    "    white_bg = generate_white_bg_img(img.shape)\n",
+    "    cv2_imshow(test_crop_contour_from_product(img, white_bg))\n",
+    "    \n",
+    "# compare_cropping_img_methods()"
    ]
   },
   {
@@ -183,23 +234,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_product_picture(product_image_path, bg):\n",
-    "    pdt = cv2.imread(product_image_path)\n",
-    "    \n",
+    "def get_product_picture(product_image, bg):\n",
+    "#     pdt = cv2.imread(product_image_path)\n",
+    "    pdt = product_image\n",
     "    (pdt_y, pdt_x, _) = pdt.shape\n",
     "    (bg_y, bg_x, _) = bg.shape\n",
     "    assert (pdt_y <= bg_y and pdt_x <= bg_x) \n",
     "    \n",
-    "    y = int(min(max(bg_y/8, 128), pdt_y))\n",
+    "#     y = int(min(max(bg_y/8, 128), pdt_y))\n",
+    "\n",
+    "    \n",
+    "    y = random.randint(40, 100)\n",
     "    x = int(pdt_x * y/pdt_y) \n",
+    "#     print (pdt.shape, x, y)\n",
     "    # resize image\n",
     "    resized = cv2.resize(pdt, (y, x), interpolation = cv2.INTER_AREA)\n",
     "    return resized\n",
     "    \n",
-    "def generate_train_image(background_image_path, product_image_path, combined_output_path, product_id, image_id):         \n",
+    "def generate_train_image(background_image_path, product_image, combined_output_path, product_id, image_id):         \n",
     "    bg = cv2.imread(background_image_path)\n",
-    "    pdt = get_product_picture(product_image_path, bg)\n",
-    "    \n",
+    "#     pdt = get_product_picture(product_image_path, bg)\n",
+    "    pdt = get_product_picture(product_image, bg)\n",
     "    # TODO: blur boundary\n",
     "    # TODO: black in product\n",
     "    mask = np.logical_and(pdt[:,:,0]>0, pdt[:,:,1]>0, pdt[:,:,2]>0)\n",
@@ -243,33 +298,30 @@
     "        shutil.rmtree(combined_output_folder)\n",
     "    os.makedirs(combined_output_folder)\n",
     "    \n",
-    "    for product_id in listdir(product_image_folder):\n",
-    "        in_folder = join(product_image_folder, product_id) \n",
-    "        out_folder = join(combined_output_folder, product_id) \n",
-    "        if isfile(in_folder):\n",
+    "#     for product_id in listdir(product_image_folder):\n",
+    "    count = 0\n",
+    "    for product_pil_image, label in product_dataset:\n",
+    "        count += 1\n",
+    "        if count % 50 != 48:\n",
     "            continue\n",
-    "        os.makedirs(out_folder)\n",
-    "        product_barcodes.append(product_id)\n",
+    "        product_cv2_image = np.array(product_pil_image) \n",
+    "        product_cv2_image = product_cv2_image[:, :, ::-1].copy() \n",
+    "        product_id = product_dataset.classes[label]\n",
+    "        out_folder = join(combined_output_folder, product_id) \n",
+    "        if not os.path.exists(out_folder):\n",
+    "            os.makedirs(out_folder)\n",
     "        \n",
-    "        count = 0\n",
-    "        for f in listdir(in_folder):\n",
-    "            if not f.endswith('.png') and not f.endswith('.jpg'):\n",
-    "                continue\n",
-    "            count += 1\n",
-    "            if count % 50 != 0:\n",
-    "                continue\n",
-    "            product_image_path = join(in_folder, f)\n",
-    "            background_image_path = bg_imgs[random.randint(0, bg_imgs_count-1)]\n",
-    "            image_id = product_id + '_' + str(count)\n",
-    "            combined_output_path = join(root, combined_output_folder, product_id, image_id+ '.jpg')\n",
-    "            try:\n",
-    "                generate_train_image(background_image_path, product_image_path, combined_output_path, product_id, image_id)\n",
-    "            except:\n",
-    "                print(\"failed generate_train_image, ignore...\")\n",
-    "                continue\n",
-    "            combined_imgs_count+=1\n",
+    "        background_image_path = bg_imgs[random.randint(0, bg_imgs_count-1)]\n",
+    "        image_id = product_id + '_' + str(count)\n",
+    "        combined_output_path = join(root, combined_output_folder, product_id, image_id+ '.jpg')\n",
+    "        try:\n",
+    "            generate_train_image(background_image_path, product_cv2_image, combined_output_path, product_id, image_id)\n",
+    "        except:\n",
+    "            print(\"failed generate_train_image, ignore...\")\n",
+    "            continue\n",
+    "        combined_imgs_count+=1\n",
     "\n",
-    "    print ('number of products', len(product_barcodes))\n",
+    "#     print ('number of products', len(product_barcodes))\n",
     "    print ('number of background images', bg_imgs_count)\n",
     "    print ('number of generated combined images', combined_imgs_count)\n",
     "\n",
