improve recall from 8% to 12%

--- a/ReadData.ipynb
+++ b/ReadData.ipynb
@@ -172,25 +172,24 @@
     "item = plate_data.find_one()\n",
     "# print(item)\n",
     "\n",
-    "# from cpsdriver.codec import DocObjectCodec\n",
-    "# plate_data_item = DocObjectCodec.decode(doc=item, collection='plate_data')\n",
-    "# print (plate_data_item.data)\n",
-    "# np_data = plate_data.data\n",
-    "# print (np_data)\n",
-    "#                          (plates[i],shelf[i],t[i])\n",
-    "# print (np_data.shape) # (12, 7, 13)\n",
+    "from cpsdriver.codec import DocObjectCodec\n",
     "\n",
-    "# max_gondola = 6\n",
-    "# max_shelves = 7\n",
-    "# plates = np.zeros((max_gondola,max_shelves))\n",
-    "# for item in plate_data.find():\n",
-    "#     gondola_id = item['gondola_id']\n",
-    "#     shelf_index = item['shelf_index']\n",
-    "#     plate_index = item['plate_index']\n",
-    "#     plates[gondola_id][shelf_index] += 1\n",
-    "# #     print ('gondola_id',gondola_id,'shelf_index',shelf_index, 'plate_index',plate_index)\n",
+    "max_gondola = 6\n",
+    "max_shelves = 7\n",
+    "for item in plate_data.find():\n",
+    "    gondola_id = item['gondola_id']\n",
+    "    shelf_index = item['shelf_index']\n",
+    "    plate_index = item['plate_index']\n",
+    "\n",
+    "    plate_data_item = DocObjectCodec.decode(doc=item, collection='plate_data')\n",
+    "    np_plate = plate_data_item.data\n",
+    "    np_plate = np.nan_to_num(np_plate, copy=True, nan=0)\n",
+    "    print (np_plate)\n",
+    "#     print (plate_data_item.data) # [time,shelf,plate]\n",
+    "    break\n",
+    "#     print ('gondola_id',gondola_id,'shelf_index',shelf_index, 'plate_index',plate_index)\n",
     "    \n",
-    "# print (plates)\n"
+    "print (plates)\n"
    ]
   },
   {
