gt TEAM-PEI-JD-1 done

--- a/ReadData.ipynb
+++ b/ReadData.ipynb
@@ -67,7 +67,7 @@
     "# client = MongoClient('mongodb://cpsweek:localdb@localhost:27018')\n",
     "client = MongoClient('mongodb://localhost:27017')\n",
     "\n",
-    "db = client['cps-test-01']"
+    "db = client['ALL-SIMPLE-CHIP-1']"
    ]
   },
   {
@@ -77,10 +77,10 @@
    "outputs": [],
    "source": [
     "# display a video\n",
-    "from IPython.display import Video\n",
+    "# from IPython.display import Video\n",
     "\n",
     "# Video('https://archive.org/download/Sita_Sings_the_Blues/Sita_Sings_the_Blues_small.mp4')\n",
-    "Video('data/cps-test-videos/192.168.1.100_2020-01-28_22-24-06.mp4')\n",
+    "# Video('data/cps-test-videos/192.168.1.100_2020-01-28_22-24-06.mp4')\n",
     "# Video(‘path/to/video.mp4’, embed=True)\n",
     "# Video(b’raw-videodata’, embed=True)"
    ]
@@ -105,29 +105,32 @@
     "    f = io.BytesIO()\n",
     "    PIL.Image.fromarray(a).save(f, fmt)\n",
     "    display(Image(data=f.getvalue()))\n",
-    "    \n",
-    "# cam = cv2.VideoCapture(0)\n",
-    "cam = cv2.VideoCapture('data/cps-test-videos/192.168.1.100_2020-01-28_22-24-06.mp4')\n",
-    "frame_count = 0\n",
-    "start_time = time.time()\n",
-    "try:\n",
-    "    while(True):\n",
-    "        # Capture frame-by-frame\n",
-    "        ret, frame = cam.read()\n",
-    "# Convert the image from OpenCV BGR format to matplotlib RGB format\n",
-    "        # to display the image\n",
-    "        frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "        showarray(frame)\n",
-    "        frame_count += 1\n",
-    "        elapsed_time = time.time() - start_time # seconds\n",
-    "        print (int(frame_count/elapsed_time), 'fps')\n",
-    "# Display the frame until new frame is available\n",
-    "        clear_output(wait=True)\n",
-    "        \n",
-    "        \n",
-    "except KeyboardInterrupt:\n",
-    "    cam.release()\n",
-    "    print (\"Stream stopped\")"
+    "\n",
+    "def show_my_camera():\n",
+    "    # cam = cv2.VideoCapture(0)\n",
+    "    cam = cv2.VideoCapture('data/cps-test-videos/192.168.1.100_2020-01-28_22-24-06.mp4')\n",
+    "    frame_count = 0\n",
+    "    start_time = time.time()\n",
+    "    try:\n",
+    "        while(True):\n",
+    "            # Capture frame-by-frame\n",
+    "            ret, frame = cam.read()\n",
+    "    # Convert the image from OpenCV BGR format to matplotlib RGB format\n",
+    "            # to display the image\n",
+    "            frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "            showarray(frame)\n",
+    "            frame_count += 1\n",
+    "            elapsed_time = time.time() - start_time # seconds\n",
+    "            print (int(frame_count/elapsed_time), 'fps')\n",
+    "    # Display the frame until new frame is available\n",
+    "            clear_output(wait=True)\n",
+    "\n",
+    "\n",
+    "    except KeyboardInterrupt:\n",
+    "        cam.release()\n",
+    "        print (\"Stream stopped\")\n",
+    "\n",
+    "# show_my_camera()"
    ]
   },
   {
@@ -137,6 +140,8 @@
    "outputs": [],
    "source": [
     "# db.products\n",
+    "from IPython.display import Image, display\n",
+    "\n",
     "class Product:\n",
     "    def __init__(self, barcode_type, id, name, thumbnail, price, weight):\n",
     "        self.barcode_type =barcode_type\n",
@@ -161,12 +166,28 @@
     "    barcode_type = item['product_id']['barcode_type']\n",
     "    id = item['product_id']['id']\n",
     "    name = item['metadata']['name']\n",
-    "    thumbnail = item['metadata']['thumbnail']\n",
-    "    price = item['metadata']['price']\n",
-    "    weight = item['metadata']['weight']\n",
+    "    if 'thumbnail' in item['metadata']:\n",
+    "        thumbnail = item['metadata']['thumbnail']\n",
+    "    else:\n",
+    "        thumbnail = None\n",
+    "    if 'price' in item['metadata']:\n",
+    "        price = item['metadata']['price']\n",
+    "    else:\n",
+    "        price = 0.0\n",
+    "    \n",
+    "    if 'weight' in item['metadata']:\n",
+    "        weight = item['metadata']['weight']\n",
+    "    else:\n",
+    "        weight = 0.0\n",
     "    product = Product(barcode_type, id, name, thumbnail, price, weight)\n",
     "    products[id] = product\n",
+    "    target_weight = 609\n",
+    "    if weight < target_weight-50 or weight > target_weight + 50:\n",
+    "        continue\n",
+    "        \n",
     "    print (product)\n",
+    "    if product.thumbnail is not None:\n",
+    "        display(Image(url= product.thumbnail, width=200, height=100))\n",
     "print ('products', len(products))\n",
     "products[''] = Product('barcode_type', 'id', 'name', 'thumbnail', price=0, weight=0) "
    ]
@@ -190,13 +211,15 @@
     "idx = 0\n",
     "plates = np.zeros((max_gondola,max_shelves))\n",
     "for item in planogram.find():\n",
-    "    print (item)\n",
-    "    print()\n",
+    "#     print (item)\n",
+    "#     print()\n",
     "#     print (len(item['plate_ids']))\n",
     "#     count += len(item['plate_ids'])\n",
     "    shelf_index = item['plate_ids'][0]['shelf_id']['shelf_index']\n",
     "    gondola_id = item['plate_ids'][0]['shelf_id']['gondola_id']['id']\n",
     "    plates[gondola_id][shelf_index] += len(item['plate_ids'])\n",
+    "    if 'barcode_type' not in item['planogram_product_id']:\n",
+    "        continue\n",
     "    product_barcode_type = item['planogram_product_id']['barcode_type']\n",
     "    product_barcode = item['planogram_product_id']['id']\n",
     "    product = products[product_barcode]\n",
@@ -206,10 +229,10 @@
     "#         plate_ids.append(plate_id['plate_index'])\n",
     "#     print (products[product_barcode])\n",
     "    idx += 1\n",
-    "    if (idx >=2) :\n",
-    "        break\n",
+    "#     if (idx >=2) :\n",
+    "#         break\n",
     "    \n",
-    "# print (plates)\n",
+    "print (plates)\n",
     "# print (count)\n",
     "# print (item)"
    ]
@@ -227,22 +250,23 @@
     "\n",
     "from cpsdriver.codec import DocObjectCodec\n",
     "\n",
+    "# Note: some shelves have only 9 plates, but still have 12 plates weight data, strange.\n",
     "max_gondola = 6\n",
     "max_shelves = 7\n",
     "for item in plate_data.find():\n",
     "    gondola_id = item['gondola_id']\n",
     "    shelf_index = item['shelf_index']\n",
     "    plate_index = item['plate_index']\n",
-    "\n",
-    "    plate_data_item = DocObjectCodec.decode(doc=item, collection='plate_data')\n",
-    "    np_plate = plate_data_item.data\n",
-    "    np_plate = np.nan_to_num(np_plate, copy=True, nan=0)\n",
-    "    print (np_plate)\n",
-    "#     print (plate_data_item.data) # [time,shelf,plate]\n",
-    "    break\n",
-    "#     print ('gondola_id',gondola_id,'shelf_index',shelf_index, 'plate_index',plate_index)\n",
-    "    \n",
-    "print (plates)\n"
+    "    if gondola_id == 5:\n",
+    "        plate_data_item = DocObjectCodec.decode(doc=item, collection='plate_data')\n",
+    "        np_plate = plate_data_item.data\n",
+    "        np_plate = np.nan_to_num(np_plate, copy=True, nan=0)\n",
+    "        np_plate = np_plate[:, 1:13, 1:13] # remove first line, which is always NaN elements\n",
+    "    #     print (np_plate.shape) # [time,shelf,plate] (12, 7, 15)\n",
+    "        print (np_plate[:,:,:]) # [time,shelf,plate]\n",
+    "        break\n",
+    "        print ('gondola_id',gondola_id, 'np_plate.shape', np_plate.shape)\n",
+    "    \n"
    ]
   },
   {
@@ -251,10 +275,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "targets = db['targets']\n",
+    "# targets = db['targets']\n",
+    "targets = db['full_targets']\n",
     "print (targets.count())\n",
     "item = targets.find_one()\n",
-    "print (item)\n",
+    "# print (item)\n",
     "\n",
     "for item in targets.find():\n",
     "    if item['document']['targets']:\n",
@@ -409,9 +434,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
